# dagster-nix

./: .gitignore  README.md  flake.nix  overlay.nix  pyproject.toml
.github/ci/: create_pr.py  discovery.py  update.py
.github/workflows/: check.yml  ci.yml  update-flake.yml  update.yml
modules/: dagster-yaml.nix  darwin.nix  nixos.nix  options.nix  workspace.nix
nix/: python-overrides.nix  shell.nix
tests/: vmtest.nix
tests/hello/: definitions.py
tests/openalex/: definitions.py
