[project]
name = "dagster-nix"
version = "0.0.0"
description = "Dagster packages for Nix"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.18",
    "dagster-webserver>=1.12.18",
    "dagster-graphql>=1.12.18",
    "dagster-postgres>=0.28.18",
    "dagster-duckdb>=0.28.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_nix"]

[tool.uv]
# Only use pre-built wheels
no-build-package = ["grpcio"]
